[project]
name = "qe-defect-tracker"
version = "1.0"
authors = [
  { name="Andrew Timmins", email="atimmins@andrew.cmu.edu" },
]
description = "A framework for tracking defect energies"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]